[workspace]
resolver = "2"
members = ["wadescan", "wadescan-common", "wadescan-ebpf"]
default-members = ["wadescan", "wadescan-common"]

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }

anyhow = { version = "1", default-features = false }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2", default-features = false }
which = { version = "7.0.3", default-features = false }
tokio = { version = "1", default-features = false }

[profile.release.package.wadescan-ebpf]
debug = 2
opt-level = 3
codegen-units = 1
overflow-checks = false
incremental = false

[profile.release.package.wadescan]
debug = 2
opt-level = 3
codegen-units = 1
overflow-checks = false
incremental = false

[profile.release.package.wadescan-common]
debug = 2
opt-level = 3
codegen-units = 1
overflow-checks = false
incremental = false
