[package]
name = "wadescan-ebpf"
version = "0.1.0"
edition = "2024"

[dependencies]
wadescan-common = { path = "../wadescan-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.7"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "wadescan"
path = "src/main.rs"
